# django-calendar-app

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: manage.py
src/contrib/: models.py  serializers.py
src/contrib/migrations/: 0001_initial.py
src/django_calendar_app/: asgi.py  middlewares.py  settings.py  urls.py  wsgi.py
src/events/: filters.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
src/events/migrations/: 0001_initial.py
src/rooms/: models.py  serializers.py  tests.py  urls.py  views.py
src/rooms/migrations/: 0001_initial.py
